Switch Cookie to use ContentSettingException instead of CookieInfo on Android

We are about to start syncing cookie exceptions to Android. After that allowing
users to add exceptions or toggle existing exceptions will cause crashes. It is
because for now CookieInfo only support set settings for urls.

In this CL, CookieInfo is replaced with ContentSettingException, similar to
JavaScript, to support patterns. This will make sure that users can manually
add an exception and toggle it on Android.

BUG=598909

Review URL: https://codereview.chromium.org/1864163005

Cr-Commit-Position: refs/heads/master@{#389979}

Former-commit-id: 9c6944d530898d73c02325c0a5c03a257dd7f208