chrome/android/java/src/org/chromium/chrome/browser/preferences/website/Website.java
@@ -29,7 +29,7 @@ public class Website implements Serializable {
 
     private ContentSettingException mBackgroundSyncExceptionInfo;
     private CameraInfo mCameraInfo;
-    private CookieInfo mCookieInfo;
+    private ContentSettingException mCookieException;
     private FullscreenInfo mFullscreenInfo;
     private GeolocationInfo mGeolocationInfo;
     private ContentSettingException mJavaScriptException;
@@ -128,33 +128,29 @@ public class Website implements Serializable {
     }
 
     /**
-     * Sets the CookieInfo object for this site.
+     * Sets the Cookie exception info for this site.
      */
-    public void setCookieInfo(CookieInfo info) {
-        mCookieInfo = info;
-        WebsiteAddress embedder = WebsiteAddress.create(info.getEmbedder());
-        if (embedder != null) {
-            mSummary = embedder.getTitle();
-        }
+    public void setCookieException(ContentSettingException exception) {
+        mCookieException = exception;
     }
 
-    public CookieInfo getCookieInfo() {
-        return mCookieInfo;
+    public ContentSettingException getCookieException() {
+        return mCookieException;
     }
 
     /**
      * Gets the permission that governs cookie preferences.
      */
     public ContentSetting getCookiePermission() {
-        return mCookieInfo != null ? mCookieInfo.getContentSetting() : null;
+        return mCookieException != null ? mCookieException.getContentSetting() : null;
     }
 
     /**
      * Sets the permission that govers cookie preferences for this site.
      */
     public void setCookiePermission(ContentSetting value) {
-        if (mCookieInfo != null) {
-            mCookieInfo.setContentSetting(value);
+        if (mCookieException != null) {
+            mCookieException.setContentSetting(value);
         }
     }
 
